<resources>
    <!-- fragment about pokemon -->
    <string name="frag_poke_about_pokedex_data">Pokédex Data</string>
    <string name="frag_poke_about_species">Species</string>
    <string name="frag_poke_about_height">Height</string>
    <string name="frag_poke_about_weight">Weight</string>
    <string name="frag_poke_about_training">Training</string>
    <string name="frag_poke_about_evyield">EV Yield</string>
    <string name="frag_poke_about_catch_rate">Catch Rate</string>
    <string name="frag_poke_about_base_friendship">Base Friendship</string>
    <string name="frag_poke_about_base_exp">Base Exp</string>
    <string name="frag_poke_about_growth_rate">Growth Rate</string>
    <string name="frag_poke_about_breeding">Breeding</string>
    <string name="frag_poke_about_gender">Gender</string>
    <string name="frag_poke_about_egg_groups">Egg Groups</string>
    <string name="frag_poke_about_egg_cycles">Egg Cycles</string>

    <string name="frag_poke_about_height_label">%.1fm</string>
    <string name="frag_poke_about_weight_label">%.1fkg</string>
    <string name="frag_poke_about_catch_rate_label">%1$d (%2$s)</string>
    <string name="frag_poke_about_base_friendship_label">%1$d (%2$s)</string>
    <string name="frag_poke_about_gender_male_label">♂ %.1f%%</string>
    <string name="frag_poke_about_gender_female_label">♀ %.1f%%</string>
    <string name="frag_poke_about_egg_cycles_label">%1$d (%2$s)</string>
    <string name="frag_poke_about_description_not_found">Description not found</string>
    <string name="frag_poke_about_attribute_not_found">Not found</string>

    <!-- fragment stats pokemon -->
    <string name="frag_poke_stats_base_stats">Base Stats</string>
    <string name="frag_poke_stats_base_stats_label">The ranges shown on the right are for a level 100 Pokémon. Maximum values are based on a beneficial nature, 252 EVs, 31 IVs; minimum values are based on a hindering nature, 0 EVs, 0 IVs.</string>
    <string name="frag_poke_stats_hp">HP</string>
    <string name="frag_poke_stats_attack">Attack</string>
    <string name="frag_poke_stats_defense">Defense</string>
    <string name="frag_poke_stats_special_attack">Sp. Atk</string>
    <string name="frag_poke_stats_special_defense">Sp. Def</string>
    <string name="frag_poke_stats_speed">Speed</string>
    <string name="frag_poke_stats_type_defenses">Type Defenses</string>
    <string name="frag_poke_stats_type_defenses_label">The effectiveness of each type on %s.</string>

    <!-- fragment evolution pokemon -->
    <string name="frag_evolution_title">Evolution Chart</string>
    <string name="frag_evolution_level_to_evolve">(Level %d)</string>
    <string name="frag_evolution_level_not_found">(Level not found)</string>
</resources>