<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp">

        <TextView
            android:id="@+id/tvPokedexBaseStatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/frag_poke_stats_base_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/frag_poke_stats_base_stats_label" />

        <TextView
            android:id="@+id/tvPokedexTypeDefensesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/frag_poke_stats_type_defenses"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPokedexTypeDefensesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_stats_type_defenses_label"
            android:textColor="@color/gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTypeDefenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="9" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>