<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />

        <TextView
            android:id="@+id/tvAboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun's rays, the seed grows progressively larger." />

        <TextView
            android:id="@+id/tvPokedexDataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/frag_poke_about_pokedex_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAboutDescription" />

        <TextView
            android:id="@+id/tvSpeciesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_species"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPokedexDataTitle" />

        <TextView
            android:id="@+id/tvSpeciesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/tvSpeciesTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvSpeciesTitle"
            tools:text="Seed Pokemon" />

        <TextView
            android:id="@+id/tvHeightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_height"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSpeciesTitle" />

        <TextView
            android:id="@+id/tvHeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvHeightTitle"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvHeightTitle"
            tools:text="0.7m (2′04″)" />

        <TextView
            android:id="@+id/tvWeightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_weight"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeightTitle" />

        <TextView
            android:id="@+id/tvWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvWeightTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvWeightTitle"
            tools:text="6.9kg (15.2 lbs)" />

        <TextView
            android:id="@+id/tvTrainingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/frag_poke_about_training"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWeightLabel" />

        <TextView
            android:id="@+id/tvEvyieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_evyield"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTrainingTitle" />

        <TextView
            android:id="@+id/tvEvyieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvEvyieldTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvEvyieldTitle"
            tools:text="1 Special Attack" />

        <TextView
            android:id="@+id/tvCatchRateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_catch_rate"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEvyieldTitle" />

        <TextView
            android:id="@+id/tvCatchRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvCatchRateTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvCatchRateTitle"
            tools:text="45 (5.9% with Pokeball, full HP)" />

        <TextView
            android:id="@+id/tvBaseFriendshipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_base_friendship"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCatchRateTitle" />

        <TextView
            android:id="@+id/tvBaseFriendshipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvBaseFriendshipTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvBaseFriendshipTitle"
            tools:text="70 (normal)" />

        <TextView
            android:id="@+id/tvBaseExpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_base_exp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBaseFriendshipTitle" />

        <TextView
            android:id="@+id/tvBaseExpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvBaseExpTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvBaseExpTitle"
            tools:text="64" />

        <TextView
            android:id="@+id/tvGrowthRateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_growth_rate"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBaseExpTitle" />

        <TextView
            android:id="@+id/tvGrowthRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvGrowthRateTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvGrowthRateTitle"
            tools:text="Medium Slow" />

        <TextView
            android:id="@+id/tvBreedingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/frag_poke_about_breeding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGrowthRateTitle" />

        <TextView
            android:id="@+id/tvGenderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_gender"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBreedingTitle" />

        <TextView
            android:id="@+id/tvGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvGenderTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvGenderTitle"
            tools:text="87,5%, 12,5%" />

        <TextView
            android:id="@+id/tvEggGroupsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_egg_groups"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGenderTitle" />

        <TextView
            android:id="@+id/tvEggGroupsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvEggGroupsTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvEggGroupsTitle"
            tools:text="Grass, Monster" />

        <TextView
            android:id="@+id/tvEggCyclesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/frag_poke_about_egg_cycles"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEggGroupsTitle" />

        <TextView
            android:id="@+id/tvEggCyclesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvEggCyclesTitle"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tvEggCyclesTitle"
            tools:text="20 (4,884 - 5,140 steps)" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>